<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout

        android:id="@+id/log_layout"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/xologo" />

        <TextView
            android:id="@+id/ocenka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mark_from_shaldenko"
            android:textColor="#a73a4468" />


    </LinearLayout>


    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_layout"
        android:layout_centerHorizontal="true"

        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:ems="20"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="10dp"

        android:textColor="@color/colorPrimary" />

    <EditText

        android:id="@+id/editText2"
        android:layout_width="300dp"

        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:ems="20"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"

        android:textColor="@color/colorPrimary" />

    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:id="@+id/progressbar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_below="@id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/log_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/log_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        android:textColor="@color/forget_color" />
</RelativeLayout>