<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.vladyslavboiko.xogametwo.activities.RegistrationActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/reg_logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/xologo" />

        <EditText
            android:id="@+id/reg_email_edittext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_logo"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/enter_your_email"
            android:textSize="15dp"
            android:padding="10dp"
            />



        <EditText
            android:id="@+id/reg_nickname_edittext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_email_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawableStart="@drawable/ic_account_box_black_24dp"
            android:hint="@string/username_str"
            android:textSize="15dp"
            android:padding="10dp" />

        <EditText
            android:id="@+id/reg_password_edittext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_nickname_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/enter_your_password"
            android:padding="10dp"
            android:textSize="15dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/reg_password_ret_edittext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_password_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/re_password"
            android:padding="10dp"
            android:textSize="15dp"
            android:inputType="textPassword"/>

        <Button

            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/reg_password_ret_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/register"
            />
    </RelativeLayout>
</RelativeLayout>
